welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: illegal start of simple expression
while(!sortieTrouvee())){
                       ^