welcome.lessons.welcome.loopdowhile.Poucet1.scala.code

while(!sortieTrouvee())){
  for (nbpas <- 0 to 5){
    avance()}
  	if (estSurBiscuit(){
      nbBiscuit=nbBiscuit+1}
  	if (nbBiscuit==3) {
      droite()}
    
    else
      gauche()
  
  if (sortieTrouvee(){
  avance()
  }
}



